test/src/export_base_buffer.mlt
open! Core_kernel

module Buffer_is_from_base : module type of struct
  include Base.Buffer
end =
  Buffer

[%%expect]

module Buffer_is_from_caml : module type of struct
  include Caml.Buffer
end =
  Buffer

[%%expect
  {|
Line _, characters _-_:
Error: Signature mismatch:
       ...
       The value `add_int64_le' is required but not provided
       File "buffer.mli", line 278, characters 0-37: Expected declaration
       The value `add_int64_be' is required but not provided
       File "buffer.mli", line 272, characters 0-37: Expected declaration
       The value `add_int64_ne' is required but not provided
       File "buffer.mli", line 266, characters 0-38: Expected declaration
       The value `add_int32_le' is required but not provided
       File "buffer.mli", line 260, characters 0-37: Expected declaration
       The value `add_int32_be' is required but not provided
       File "buffer.mli", line 254, characters 0-37: Expected declaration
       The value `add_int32_ne' is required but not provided
       File "buffer.mli", line 248, characters 0-37: Expected declaration
       The value `add_int16_le' is required but not provided
       File "buffer.mli", line 242, characters 0-35: Expected declaration
       The value `add_int16_be' is required but not provided
       File "buffer.mli", line 236, characters 0-35: Expected declaration
       The value `add_int16_ne' is required but not provided
       File "buffer.mli", line 230, characters 0-35: Expected declaration
       The value `add_uint16_le' is required but not provided
       File "buffer.mli", line 224, characters 0-36: Expected declaration
       The value `add_uint16_be' is required but not provided
       File "buffer.mli", line 218, characters 0-36: Expected declaration
       The value `add_uint16_ne' is required but not provided
       File "buffer.mli", line 212, characters 0-36: Expected declaration
       The value `add_int8' is required but not provided
       File "buffer.mli", line 206, characters 0-31: Expected declaration
       The value `add_uint8' is required but not provided
       File "buffer.mli", line 200, characters 0-32: Expected declaration
       The value `of_seq' is required but not provided
       File "buffer.mli", line 176, characters 0-28: Expected declaration
       The value `add_seq' is required but not provided
       File "buffer.mli", line 172, characters 0-37: Expected declaration
       The value `to_seqi' is required but not provided
       File "buffer.mli", line 167, characters 0-37: Expected declaration
       The value `to_seq' is required but not provided
       File "buffer.mli", line 162, characters 0-28: Expected declaration
       The value `truncate' is required but not provided
       File "buffer.mli", line 154, characters 0-31: Expected declaration
       The value `output_buffer' is required but not provided
       File "buffer.mli", line 150, characters 0-44: Expected declaration
       The value `add_channel' is required but not provided
       File "buffer.mli", line 143, characters 0-48: Expected declaration
       The value `add_substitute' is required but not provided
       File "buffer.mli", line 123, characters 0-62: Expected declaration
       The value `add_utf_16be_uchar' is required but not provided
       File "buffer.mli", line 100, characters 0-45: Expected declaration
       The value `add_utf_16le_uchar' is required but not provided
       File "buffer.mli", line 93, characters 0-45: Expected declaration
       The value `add_utf_8_uchar' is required but not provided
       File "buffer.mli", line 87, characters 0-42: Expected declaration
       The value `to_bytes' is required but not provided
       File "buffer.mli", line 45, characters 0-25: Expected declaration
|}]
